--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -6,6 +6,8 @@ body {
 }
 .navbar{
     background: #33759800;
+    z-index: 999;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.288);
 }
 nav img {
     margin-left: 30px;
@@ -29,6 +31,51 @@ nav ul li a:hover {
 .d-block {
 
     height: 600px;
-    margin-top: -300px;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.288);
     background-size: cover;
 }
+/* ---------------------BARRE DE LIVRAISON--------------------- */
+.livraison  {
+    background: white;
+    width: 100%;
+    font-family: 'Roboto', sans-serif;
+    color: #337598;
+    text-align: center;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.288);
+}
+
+/* ------------------BARRE SOUS MENUE HOMMES FEMMES---------------- */
+.container-fluid{
+    background: #fdff97;
+}
+.categorie {
+    /* margin: 0 50%; */
+    width: 100%;
+    background: #337598;
+   
+    padding: 0px 0px;
+    text-align: center;
+    font-family: 'Roboto', sans-serif;
+    border: 1px solid #fdff97;
+    display: inline-block;
+}
+.categorie a{
+    color: #fdff97;
+    font-family: 'Roboto', sans-serif;
+    text-decoration:none;
+}
+.categorie:hover{
+    padding: 1px;
+}
+/* ---------------BANNIERE PROMOTION(SOLDES)---------------- */
+.banier{
+    width: 100%;
+}
+.banier img{
+    width: 1140px;
+}
+
+
+
+
+
